Updated examples, fixed broken onRenderPlaceholder

--- a/packages/office-ui-fabric-react/src/components/Dropdown/examples/Dropdown.Basic.Example.scss
+++ b/packages/office-ui-fabric-react/src/components/Dropdown/examples/Dropdown.Basic.Example.scss
@@ -1,5 +1,11 @@
 :global {
-  .ms-DropdownExample {
+  .dropdownExample {
     max-width: 300px;
+  }
+  .dropdownExample-option {
+    display: flex;
+  }
+  .dropdownExample-placeholder {
+    display: flex;
   }
 }
